yt-videos/kind-istio/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-avenue
  labels:
    name: devops-avenue
