yt-videos/kind-istio/k8s/blog-service-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service-v2
  namespace: devops-avenue
  labels:
    app: blog-service
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-service
      version: v2
  template:
    metadata:
      labels:
        app: blog-service
        version: v2
    spec:
      containers:
      - name: blog-service
        image: devopsavenue/blog-service:v1
        ports:
        - containerPort: 5004
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 5004
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5004
          initialDelaySeconds: 5
          periodSeconds: 5
