yt-videos/kind-istio/k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: devops-avenue
  labels:
    app: user-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        version: v1
    spec:
      containers:
      - name: user-service
        image: devopsavenue/user-service:v1
        ports:
        - containerPort: 5003
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: devops-avenue
  labels:
    app: user-service
spec:
  type: ClusterIP
  ports:
  - port: 5003
    targetPort: 5003
    protocol: TCP
    name: http
  selector:
    app: user-service
