yt-videos/kind-istio/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-avenue-ingress
  namespace: devops-avenue
spec:
  ingressClassName: nginx
  rules:
  - host: istio.gurlal.com
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5001
